[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/falling_platform_v2.png" type="Texture" id=1]
[ext_resource path="res://FallingPlatformV2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 14.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 4 )

[node name="FallingPlatformV2" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="InAirArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InAirArea"]
position = Vector2( 0, 9 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="InAirArea" to="." method="_on_InAirArea_body_entered"]
